# auto-ec2-webapp-deployment-service

./: README.md  app_deploys.json  deploy.sh  generate_nginx_config.sh  nginx.conf  pyproject.toml  requirements.txt  server_settings.yml  update_deploy.py  webhook_listener.py
